Implement bulk/composite request endpoint #379
